# VISTA

./: .gitignore  README.md  requirements.txt
data/dataset/TC01_object_localization/TC01_00/: annotations.json  imu_left.csv
data/dataset/TC01_object_localization/TC01_01/: annotations.json
data/dataset/TC01_object_localization/TC01_02/: annotations.json  imu_left.csv
data/dataset/TC01_object_localization/TC01_03/: imu_left.csv
data/dataset/TC01_object_localization/TC01_04/: annotations.json  imu_left.csv
data/dataset/TC01_object_localization/TC01_07/: imu_left.csv
data/dataset/TC05_social_cues/TC05_00/: annotations.json
data/dataset/TC05_social_cues/TC05_01/: annotations.json  imu_left.csv
data/dataset/TC07_task_instruction/TC07_00/: annotations.json
data/dataset/TC09_txt_understanding/TC09_00/: annotations.json  imu_left.csv
data/dataset/TC09_txt_understanding/TC09_02/: annotations.json
data/dataset/TC09_txt_understanding/TC09_03/: annotations.json
data/processed/TC01_object_localization/TC01_00/: annotations.json  imu_left.csv
data/processed/annotations/: annotations.json
data/raw/: 20250618_objectloc_office.json
tools/: bulk_annotation_edit.py  extract_and_label_frames.py  extract_from_vrs.py  file_download.py
tools/extract_dataset/: CMakeLists.txt
tools/extract_dataset/tools/: extract_from_vrs.cpp  extract_from_vrs.py  test.py
tools/test_code/: annotation_edit.py  aria_color_correct.py  caption_test.py  color_correct.py  dataprovider_test.py  extractor_test.py  second_test.py  test.py
(+108 files in other folders)
